# dashpay

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  README.md  batch_commit.sh  continue_commits.sh  fix-timestamps.sh  package.json  recreate_history.py
.claude/: settings.local.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/apps/cli/: CMakeLists.txt
cpp/apps/cli/include/: cli.hpp  commands.hpp
cpp/apps/cli/src/: commands.cpp  main.cpp
cpp/core/: CMakeLists.txt
cpp/libs/core/: CMakeLists.txt
cpp/libs/core/include/dashpay/: accounts.hpp  api.hpp  config.hpp  crypto.hpp  encoding.hpp  error.hpp  metering.hpp  mpp.hpp  persistence.hpp  qrcode.hpp  rpc.hpp  session.hpp  transaction.hpp  transaction_validation.hpp  types.hpp  url.hpp  validation.hpp  x402.hpp
cpp/libs/core/src/: accounts.cpp  api.cpp  api_client.cpp  config.cpp  crypto.cpp  crypto_impl.cpp  crypto_lib.cpp  encoding.cpp  error.cpp  metering.cpp  mpp.cpp  qrcode.cpp  rpc.cpp  session_manager.cpp  transaction_validation.cpp  url.cpp  util.cpp  x402.cpp
cpp/libs/core/tests/: config_test.cpp  transaction_test.cpp  transaction_validation_test.cpp  url_test.cpp
cpp/libs/keystore/: CMakeLists.txt
cpp/libs/keystore/include/dashpay/: keystore.hpp
cpp/libs/keystore/src/: apple_keychain.cpp  gnome_keyring.cpp  onepassword.cpp  windows_hello.cpp
cpp/libs/mcp/: CMakeLists.txt
cpp/libs/mcp/include/dashpay/: mcp.hpp
cpp/libs/mcp/src/: server.cpp
cpp/libs/mcp/tests/: test_mcp.cpp
cpp/libs/pdb/include/dashpay/: pdb.hpp
cpp/libs/pdb/src/: session.cpp  web_server.cpp
cpp/libs/types/: CMakeLists.txt
cpp/libs/types/include/dashpay/: util.hpp
cpp/libs/types/src/: util.cpp
docs/: api.md  architecture.md  building.md  cli.md  keystore.md  mcp.md  metering.md  mpp.md  nix.md  pdb.md  persistence.md  quickstart.md  rebranding.md  release.md  security.md  transaction.md  types.md  wallet-adapter.md  x402.md
